# scavenger

./: .appveyor.yml  .gitattributes  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  build.sh  config.yaml  log4rs.yaml
chocolatey/: scavenger.nuspec
chocolatey/tools/: chocolateyinstall.ps1
proto/: api.proto
src/: api.rs  api_grpc.rs  burstmath.rs  client.rs  config.rs  cpu_worker.rs  gpu_worker.rs  gpu_worker_async.rs  interval.rs  logger.rs  main.rs  miner.rs  ocl.rs  plot.rs  poc_hashing.rs  pocmath.rs  reader.rs  requests.rs  shabal256.rs  shabals.rs  utils.rs  worker.rs
src/c/: .clang-format  SSE2NEON.h  common.c  common.h  mshabal.h  mshabal256.h  mshabal_128.c  mshabal_128.h  mshabal_128_avx.c  mshabal_128_avx.h  mshabal_128_neon.c  mshabal_128_neon.h  mshabal_128_sse2.c  mshabal_128_sse2.h  mshabal_256.c  mshabal_256.h  mshabal_256_avx2.c  mshabal_256_avx2.h  mshabal_512_avx512f.c  mshabal_512_avx512f.h  shabal.c  shabal.h  shabal64-darwin.s  shabal64.s  shabal_avx.c  shabal_avx.h  shabal_avx2.c  shabal_avx2.h  shabal_avx512f.c  shabal_avx512f.h  shabal_neon.c  shabal_neon.h  shabal_sse2.c  shabal_sse2.h  sph_shabal.c  sph_shabal.h  sph_types.h
src/com/: api.rs  client.rs  mod.rs
src/future/: interval.rs  mod.rs  prio_retry.rs
src/ocl/: kernel.cl
test_data/: 10282355196851764065_0_8
