[package]
name = "scavenger"
version = "1.0.0"
license = "GPL3"
authors = ["PoC Consortium <bots@cryptoguru.org>"]
description = """
Scavenger - a Burst miner written in Rust
"""
build = "build.rs"
repository = "https://github.com/PoC-Consortium/scavenger"
documentation = "https://github.com/PoC-Consortium/scavenger"
keywords = ["burstcoin", "miner", "rust","cryptocurrency"]
readme = "README.md"

[dependencies]
hyper = "0.12"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
libc = "0.1"
hex = "0.3.1"
tokio = "0.1"
tokio-core = "0.1"
url = "1.7.1"
chan = "0.1.21"
futures = "0.1.22"
rayon = "1.0"
num_cpus = "0.2"
sys-info = "*"
stopwatch = "0.0.7"
cfg-if = "0.1"
filetime = "0.2"
clap = "~2.30"
rand = "0.5"
log = "0.4.3"
log4rs = { version = "0.8.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
chrono = "0.4.5"
hyper-rustls = "0.14.0"
core_affinity = "0.5.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[build-dependencies]
cc = "1.0"