[package]
name = "scavenger"
version = "1.7.0"
license = "GPL-3.0"
authors = ["PoC Consortium <bots@cryptoguru.org>"]
description = """
Scavenger - a Burst miner written in Rust
"""
build = "build.rs"
repository = "https://github.com/PoC-Consortium/scavenger"
documentation = "https://github.com/PoC-Consortium/scavenger"
keywords = ["burstcoin", "miner", "rust","cryptocurrency"]
readme = "README.md"

[features]
simd = []
neon = []
opencl = ["ocl-core"]

[dependencies]
cfg-if = "0.1"
clap = "~2.30"
core_affinity = "0.5.9"
crossbeam-channel = "0.3"
filetime = "0.2"
futures = "0.1"
hex = "0.3"
hostname = "0.1.5"
hyper = "0.12"
hyper-rustls = "0.15    "
libc = "0.2"
log = "0.4"
log4rs = { version = "0.8", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
num_cpus = "1.9"
ocl-core = { version = "0.10.0", optional = true } 
pbr = "1.0.1"
rand = "0.6"
rayon = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
stopwatch = "0.0.7"
tokio = "0.1"
tokio-core = "0.1"
url = "1.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi"] }

[build-dependencies]
cc = "1.0"
cfg-if = "0.1"
